# cpp-neural

./: .gitignore  README.md
CONCURRENCY/: CMakeLists.txt  async.cpp  more_mutex.cpp  thread.cpp  threadpool.cpp  threadpool.h
CONCURRENCY/msgqueue/: msgqueue.h
CONTAINERS/: deque.cpp  list.cpp  map.cpp  sets.cpp  singleton.cpp  vector.cpp
DT-PDF/SORTING/: main.cpp  sorting.md
OBJECT-LIFETIME/: README.md  db.cpp
OOP/: MulInheritance.cpp  OOP.md  exercise.cpp  first.cpp  inheritance.cpp  operators.cpp  polymorphism.cpp
POINTERS/: POINTERS.md  pointer.cpp  pointers
SELF-IMPLEMENTATION/: imutex.h
SELF-IMPLEMENTATION/allocators/: cppmalloc.cpp  cppmalloc.h  fixsize.h
SELF-IMPLEMENTATION/hashmap/: ihashmap.h
SELF-IMPLEMENTATION/iterators/: iterator.h
SELF-IMPLEMENTATION/queue/: iqueue.h
SELF-IMPLEMENTATION/string/: istring.h
SELF-IMPLEMENTATION/vector/: vector.h  vector1.h
STL/: exhibit1.cpp
TEMPLATES/: concepts.h  sfinae_prac.h  templates.cpp
allocators/: memory_allocation.h
codeforces/: x.cpp
design patterns/: abstractfactory.cpp  adapter.cpp  bridge.cpp  builder.cpp  composite.cpp  decorator.cpp  facade.cpp  factorymethod.cpp  observer.cpp  prototype.cpp  proxy.cpp  singleton.cpp  strategy.cpp
effective modern cpp/: prac.cpp
elevator/: elevator.h
llvm/: CMakeLists.txt  Main.cc  Main.cpp  llvm.h
llvm-playground/: CMakeLists.txt
llvm-playground/Parser/: AST.cc
neet/: stuff.cpp
neetcode/: answer.cpp  stuff.cpp  tortoise.cpp
realtime/: CMakeLists.txt  hft.h  lockfreequeue.h  memory_allocation.h  networking.h  study.md
(+34 files in other folders)
