cmake_minimum_required(VERSION 3.24.2)
project(THREADCPP)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_INCLUDE_CURRENT_DIR)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread -O2")

file(GLOB_RECURSE SOURCES threadpool.cpp)

add_executable(THREADCPP ${SOURCES})